Get current revision from HEAD pointer, not from parsing refs/head/$BRANCH

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -4,11 +4,12 @@
 
 DEPENDENCY_BIN="/usr/bin/composer"
 DEPENDENCY_BIN_ARGS="install"
-
+# The remote default branch the deployment will use
+DEFAULT_DEPLOY_BRANCH="master"
 
 # PATHS
 # ----------------------
-APP_DIR="/var/www/production"
+APP_DIR_SYMLINK="/var/www/production"
 RELEASES_DIR="/var/www/releases"
 RELEASES_SKELETON_DIR="$RELEASES_DIR/skeleton"
 DEPLOY_LOGS_DIR="/var/www/deploys"
